tests/ucc/bind/good/goto-3.c
int f(void)
{
    return 0;
}

int main(void)
{
loop:
    f();

    goto loop;

    return 0;
}
