tests/ucc/bind/bad/fun-vs-var-global.c
void fu(void);

void fu(void)
{

}

int fu;

int main(void)
{
    return fu;
}
